--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.15.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "sequelize": "^4.37.10"
   }
 }
