--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,38 @@
 {
   "development": {
     "username": "root",
-    "password": "root1234",
+    "password": "root",
     "database": "project_db",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "port": 3306,
+    "dialect": "mysql",
+    "define": {
+      "timestamps": true
+  },
+  "operatorsAliases": false
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "port": 3306,
+    "dialect": "mysql",
+    "define": {
+      "timestamps": true
+  },
+  "operatorsAliases": false
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "port": 3306,
+    "dialect": "mysql",
+    "define": {
+      "timestamps": true
+  },
+  "operatorsAliases": false
   }
 }
