--- a/package.json
+++ b/package.json
@@ -19,12 +19,19 @@
   },
   "homepage": "https://github.com/joshtecx/Flash-Cards#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
+    "connect": "^3.6.6",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "pug": "^2.0.3",
-    "sequelize": "^4.37.10"
+    "sequelize": "^4.37.10",
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
+    "dotenv": "^5.0.1",
+    "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "mongoose": "^4.9.8",
+    "nodemon": "^1.11.0"
   }
 }
