--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/joshtecx/Flash-Cards#readme",
   "dependencies": {
-    "connect": "^3.6.6",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
@@ -30,8 +29,9 @@
     "connect-mongo": "^1.3.2",
     "dotenv": "^5.0.1",
     "express": "^4.15.2",
-    "express-session": "^1.15.2",
-    "mongoose": "^4.9.8",
+    "cookie-parser": "^1.4.3",
+    "express-jwt": "^5.3.0",
+    "jsonwebtoken": "^7.4.1",
     "nodemon": "^1.11.0"
   }
 }
