--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,6 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "yc96dkrsin6mjcmj",
-    "password": "a9v6p1ncsn83zqsv",
-    "database": "wzabrecb9zsf9y9o",
-    "host": "nuskkyrsgmn5rw8c.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
-    "dialect": "mysql"
+    "use_env_variable": "JAWSDB_URL"
   }
 }
